[project]
name = "homeplane"
version = "0.1.0"
description = "A lightweight personal cloud control plane"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.poetry]
packages = [{ include = "homeplane", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "^9.1.1"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
